--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "joi": "^13.1.0",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   },
   "devDependencies": {},
